<resources>
    <string name="app_name">UTS-PemrogramanBergerak</string>
    <string name="pilih_tipe_barang">Pilih tipe barang:</string>
    <string name="harga_satuan">Harga Satuan</string>
    <string name="hitung">Hitung</string>
    <string name="string_hitung" />
    <string name="string_string_hitung" />
    <string name="tipe_c">Tipe C</string>
    <string name="nama_barang">Nama Barang:</string>
    <string name="tipe_a">Tipe A</string>
    <string name="tipe_b">Tipe B</string>
    <string name="jumlah_satuan">Jumlah satuan</string>
    <string name="total_harga_n_barang_a_rp">Total Harga \n Barang A = Rp</string>
</resources>
