<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pilih_tipe_barang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/tipea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipe_a" />

                <RadioButton
                    android:id="@+id/tipeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipe_b" />

                <RadioButton
                    android:id="@+id/tipec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipe_c" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/nama_barang" />

            <EditText
                android:id="@+id/namabarang"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/harga_satuan" />

            <EditText
                android:id="@+id/hargasatuan"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="@string/jumlah_satuan" />

            <EditText
                android:id="@+id/jumlahsatuan"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:numeric="integer" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitung" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Bayar \n Barang A = Rp " />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>